[package]
name = "rust-blockchain2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"
sha2 = "0.10"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
data-encoding = "2.9"
log = "0.4"
once_cell = "1.21"

